test_suite/tests/ui/common/sanitize_without_parenthesis.stderr
error: unexpected end of input, expected parentheses
 --> tests/ui/common/sanitize_without_parenthesis.rs:3:1
  |
3 | #[nutype(sanitize)]
  | ^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `nutype` (in Nightly builds, run with -Z macro-backtrace for more info)
